fixed alignment issue

--- a/src/components/homepage/styles/landing-mobile.css
+++ b/src/components/homepage/styles/landing-mobile.css
@@ -22,7 +22,7 @@
     margin: 0;
 }
 
-.edu-year {
+.edu-year-mob {
     font-family: Cabin;
     text-align: center;
     color: #89CFF0;
